[package]
name = "opaque_framework"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.45", features = ["serde"] }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "serde"] }
hkdf = "0.13.0"
hmac = "0.13.0"
jsonwebtoken = { version = "10.4.0", features = ["sha2", "rand", "hmac", "rust_crypto"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
